# myconet

./: .gitignore  CHANGELOG.md  JOSS_paper.md  LICENSE  README.md  drought_stress.py  freiman.py  network.py  paper.bib  pyproject.toml  setup.py  setup_vps.sh  simulation.py  test_freiman.py  transport.py
examples/: README.md  drought_stress.py  make_fig1.py  quickstart.py
examples/ad_multiscale/: README.md  ad_multiscale.py
examples/cf_multiscale/: cf_multiscale.py
examples/ms_multiscale/: README.md  ms_myconet.py
examples/pd_multiscale/: README.md  pd_multiscale.py
myconet/: __init__.py
myconet-env/: pyvenv.cfg
myconet-env/Scripts/: activate  activate.bat
myconet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
