[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "myconet"
version = "1.1.0"
description = "Python framework for mycorrhizal network biophysics and mathematical biology transport analysis, with Freiman–Villani thermodynamic diagnostics"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Bertrand Mercier des Rochettes", email = "contact@quantum-proteins.ai" }
]
keywords = [
    "mycorrhizal networks", "optimal transport", "Wasserstein", "Villani",
    "hypocoercivity", "Freiman", "Talagrand", "mathematical biology",
    "multiple sclerosis", "Alzheimer", "Parkinson", "cystic fibrosis",
    "Nakajima-Zwanzig", "Smoluchowski", "cusp catastrophe"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "POT>=0.9",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
examples = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
    "twine",
    "build",
]

[project.urls]
Homepage       = "https://quantum-proteins.ai"
Repository     = "https://github.com/quantumproteinsai/myconet"
Documentation  = "https://github.com/quantumproteinsai/myconet#readme"
"Bug Tracker"  = "https://github.com/quantumproteinsai/myconet/issues"
PyPI           = "https://pypi.org/project/myconet/"

[tool.setuptools.packages.find]
where = ["."]
include = ["myconet*"]

[tool.setuptools.package-data]
myconet = ["py.typed"]

# Examples are not installed as a package — they live in examples/
# Users access them via: git clone or pip download myconet; cd examples/
